// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TreeViewMenu should render with level 3 1`] = `
<Styled(ListGroupItem)
  level={3}
  tag="li"
>
  <Styled(div)
    level={3}
  >
    +
  </Styled(div)>
  foo
</Styled(ListGroupItem)>
`;

exports[`TreeViewMenu should render with the toggle icon "+" 1`] = `
<Styled(ListGroupItem)
  level={1}
  tag="li"
>
  <Styled(div)
    level={1}
  >
    +
  </Styled(div)>
  foo
</Styled(ListGroupItem)>
`;

exports[`TreeViewMenu should render with the toggle icon "-" 1`] = `
<Styled(ListGroupItem)
  level={1}
  tag="li"
>
  <Styled(div)
    level={1}
  >
    -
  </Styled(div)>
  foo
</Styled(ListGroupItem)>
`;

exports[`TreeViewMenu should render without the toggle icon 1`] = `
<Styled(ListGroupItem)
  level={0}
  tag="li"
>
  foo
</Styled(ListGroupItem)>
`;
